test/conformance/chainsaw/validating-policies/context/image-data-arch/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-bad
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: arm64v8/busybox
