test/conformance/chainsaw/validating-policies/context/image-data-arch/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-good
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: busybox:latest
